unpackaged/main/default/objects/Trail__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>A description box for adding additional details</description>
    <inlineHelpText>Put details here</inlineHelpText>
    <label>Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>