unpackaged/main/default/objects/Trail__c/fields/Distance__c.field-meta.xml
<CustomField>
    <fullName>Distance__c</fullName>
    <description>How many miles away does the candidate live from the job</description>
    <label>Distance</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>