unpackaged/main/default/objects/Trail__c/fields/Last_Inspection_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Inspection_Date__c</fullName>
    <description>Last Date Candidate was inspected for a position</description>
    <label>Last Inspection Date</label>
    <type>Date</type>
</CustomField>